--- a/src/styles/pages/navbar.module.scss
+++ b/src/styles/pages/navbar.module.scss
@@ -1,18 +1,18 @@
 @import "../main.scss";
 
 .navbar {
-  position: fixed;
-  top: 10px; /* Offset from the top */
-  left: 10px; /* Offset from the left */
+  position: absolute;
+  top: 10px;
+  left: 10px;
   right: 10px;
   width: auto;
   color: $color-graybase;
   background-color: $color-base;
   display: flex;
   justify-content: space-between;
-  z-index: 999;
-  box-sizing: border-box; /* Ensure padding is included in the element's width */
-  padding: 10px 20px 10px 20px;
+  z-index: 1000;
+  box-sizing: border-box;
+  padding: 10px 20px;
 
   .navbar-menu {
     list-style-type: none;
@@ -52,7 +52,7 @@
   .contact-btn {
     text-decoration: none;
     color: $color-graybase;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     background-color: transparent;
     border-radius: 5px;
     border: 1px solid $color-graybase;
@@ -62,11 +62,15 @@
     img {
       width: 20px;
       height: 20px;
-      margin: 0 0 0 0.1rem;
+      margin: 0 0 0 0.2rem;
     }
   }
 
   @media screen and (max-width: 600px) {
+    .contact-btn {
+      order: -1; /* Move contact button to the beginning */
+    }
+
     .navbar-menu {
       display: none;
     }
@@ -76,32 +80,33 @@
     }
 
     &.expanded {
-      height: max-content;
-      z-index: 1000;
       .navbar-menu {
-        height: max-content;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: flex-start;
         position: absolute;
         top: 100%;
         left: 0;
         background-color: $color-base;
         width: 100%;
-        z-index: 1000;
 
         .navbar-item {
-          width: 100%; // Ensure full width for alignment and spacing consistency
+          width: 100%;
 
           a {
-            margin: 10px 0; // Simplified margin (top/bottom)
+            margin: 10px 0;
             width: 100%;
             font-size: 18px;
-            display: block; // Ensure <a> takes the full width for better clickability
+            display: block;
           }
         }
       }
+    }
+  }
+
+  @media screen and (min-width: 601px) {
+    .contact-btn {
+      order: 2; /* Move contact button to the end */
     }
   }
 }
