--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -1,6 +1,10 @@
 @import "../main.scss";
 @import "./navbar.module.scss";
 
+.mf-cursor {
+  color: #000 !important;
+}
+
 body {
   width: 100vw;
   height: 100vh;
@@ -146,19 +150,21 @@ body {
 
   .quality-products-container {
     width: 100%;
-    height: 120vh;
+    height: 150vh;
     color: #333;
     background-color: #fffcfa;
     position: relative;
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 
     .header-text {
+      position: absolute;
       width: 100%;
-      top: 20%;
+      height: max-content;
+      top: 10%;
       left: 0;
       display: flex;
       flex-direction: column;
@@ -167,7 +173,7 @@ body {
       margin-bottom: 2rem;
 
       h1 {
-        font-size: 3.5rem;
+        font-size: 2rem;
         font-weight: 600;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
       }
@@ -178,7 +184,8 @@ body {
       }
 
       p {
-        font-size: 1rem;
+        width: 90%;
+        font-size: 0.9rem;
         font-weight: normal;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
         margin: 1rem 0 0 0;
@@ -190,36 +197,57 @@ body {
       }
     }
 
-    .swiper {
-      width: 100%;
-      height: 65vh;
-      padding-top: 10px;
-      padding-bottom: 10px;
+    .carousel {
+      position: absolute;
+      left: calc(50% - 150px);
+      top: calc((40% - 100px) / 1);
+      transform-origin: 150px 2500px;
+      will-change: transform;
 
-      .swiper-slide {
-        background-position: center;
-        background-size: cover;
-        width: 500px;
-        height: 500px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+      .wrapper {
+        position: absolute;
+        height: 80vh;
+        transform-origin: 150px 2500px;
+
+        @for $i from 0 through 36 {
+          &:nth-child(#{$i}) {
+            @if $i < 36 {
+              transform: rotate(#{$i * 10}deg);
+            } @else {
+              transform: rotate(360deg); /* Rotate to show the last image */
+            }
+          }
+        }
+        &:active {
+          cursor: grabbing;
+        }
 
         img {
           width: 300px;
-          height: 300px;
+          height: 500px;
+          border-radius: 5px;
+          background: currentColor;
+          position: absolute; /* if needed, depending on your layout */
+          transition: transform 0.5s;
           object-fit: cover;
         }
 
-        h1 {
-          font-size: 21px;
-          font-weight: 500;
-          margin: 10px 0;
-        }
-
-        p {
-          font-weight: 15px;
+        h3.centered-title {
+          display: none; // Hide all titles initially
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          color: white; // Adjust color as needed
+          background-color: rgba(
+            0,
+            0,
+            0,
+            0.5
+          ); // Semi-transparent background for better readability
+          padding: 10px; // Adjust padding as needed
+          border-radius: 5px; // Add border-radius for rounded corners
+          z-index: 2; // Ensure title is above the image
         }
       }
     }
@@ -361,7 +389,7 @@ body {
 
     .quality-products-container {
       width: 100%;
-      height: 120vh;
+      height: 200vh;
       color: #333;
       background-color: #fffcfa;
       position: relative;
@@ -372,6 +400,7 @@ body {
       justify-content: center;
 
       .header-text {
+        position: absolute;
         width: 100%;
         top: 20%;
         left: 0;
@@ -406,36 +435,57 @@ body {
         }
       }
 
-      .swiper {
-        width: 100%;
-        height: 65vh;
-        padding-top: 10px;
-        padding-bottom: 10px;
+      .carousel {
+        position: absolute;
+        left: calc(50% - 100px);
+        top: calc((60% - 100px) / 1);
+        transform-origin: 150px 2500px;
+        will-change: transform;
 
-        .swiper-slide {
-          background-position: center;
-          background-size: cover;
-          width: 500px;
-          height: 500px;
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
+        .wrapper {
+          position: absolute;
+          height: 80vh;
+          transform-origin: 150px 2500px;
+
+          @for $i from 0 through 36 {
+            &:nth-child(#{$i}) {
+              @if $i < 36 {
+                transform: rotate(#{$i * 10}deg);
+              } @else {
+                transform: rotate(360deg); /* Rotate to show the last image */
+              }
+            }
+          }
+          &:active {
+            cursor: grabbing;
+          }
 
           img {
-            width: 300px;
-            height: 300px;
+            width: 270px;
+            height: 400px;
+            border-radius: 5px;
+            background: currentColor;
+            position: absolute; /* if needed, depending on your layout */
+            transition: transform 0.5s;
             object-fit: cover;
           }
 
-          h1 {
-            font-size: 21px;
-            font-weight: 500;
-            margin: 10px 0;
-          }
-
-          p {
-            font-weight: 15px;
+          h3.centered-title {
+            display: none; // Hide all titles initially
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white; // Adjust color as needed
+            background-color: rgba(
+              0,
+              0,
+              0,
+              0.5
+            ); // Semi-transparent background for better readability
+            padding: 10px; // Adjust padding as needed
+            border-radius: 5px; // Add border-radius for rounded corners
+            z-index: 2; // Ensure title is above the image
           }
         }
       }
